Rebranding this course as Python Fundamentals

--- a/Python Fundamentals Day 1.ipynb
+++ b/Python Fundamentals Day 1.ipynb
@@ -19,9 +19,7 @@
     }
    },
    "source": [
-    "# Core Python +\n",
-    "# Unit Testing + Git\n",
-    "###  __`https://goo.gl/rbzLxd`__\n",
+    "# Python Fundamentals\n",
     "\n",
     "<pre><b>\n",
     "  Dave Wade-Stein\n",
@@ -197,7 +195,7 @@
     "  __`jupyter notebook`__\n",
     "\n",
     "\n",
-    "* Navigate to the folder created from the zip file, and click on __`Core Python.ipynb`__"
+    "* Navigate to the folder created from the zip file, and click on __`Python Fundamentals Day 1.ipynb`__"
    ]
   },
   {
