--- a/Python Fundamentals Day 2.ipynb
+++ b/Python Fundamentals Day 2.ipynb
@@ -2516,7 +2516,7 @@
     "* treat __The__ and __the__ as the same word when counting\n",
     "* print out words and counts, from most common to least common\n",
     "* EXTRA: remove punctuation, so __Hamlet,__ == __Hamlet__\n",
-    "* Road Not Taken and Hamlet are available at __`https://github.com/davewadestein/Python-Core`__"
+    "* Road Not Taken and Hamlet are in your materials"
    ]
   },
   {
