--- a/Python Fundamentals Day 1.ipynb
+++ b/Python Fundamentals Day 1.ipynb
@@ -17,8 +17,8 @@
    "source": [
     "# Logistics\n",
     "* Dave Wade-Stein (dave@developintelligence.com)\n",
-    "* Class Time: 9-4 Eastern\n",
-    "* Lunch: 1-1:45 Eastern"
+    "* Class Time: 9-4 Pacific\n",
+    "* Lunch: 11:45-12:30 Pacific"
    ]
   },
   {
@@ -57,15 +57,6 @@
     "* Controls: if, elif, and else\n",
     "* Loops\n",
     "* Lists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2 + 3"
    ]
   },
   {
@@ -214,43 +205,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load '/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/this.py'\n",
-    "s = \"\"\"Gur Mra bs Clguba, ol Gvz Crgref\n",
-    "\n",
-    "Ornhgvshy vf orggre guna htyl.\n",
-    "Rkcyvpvg vf orggre guna vzcyvpvg.\n",
-    "Fvzcyr vf orggre guna pbzcyrk.\n",
-    "Pbzcyrk vf orggre guna pbzcyvpngrq.\n",
-    "Syng vf orggre guna arfgrq.\n",
-    "Fcnefr vf orggre guna qrafr.\n",
-    "Ernqnovyvgl pbhagf.\n",
-    "Fcrpvny pnfrf nera'g fcrpvny rabhtu gb oernx gur ehyrf.\n",
-    "Nygubhtu cenpgvpnyvgl orngf chevgl.\n",
-    "Reebef fubhyq arire cnff fvyragyl.\n",
-    "Hayrff rkcyvpvgyl fvyraprq.\n",
-    "Va gur snpr bs nzovthvgl, ershfr gur grzcgngvba gb thrff.\n",
-    "Gurer fubhyq or bar-- naq cersrenoyl bayl bar --boivbhf jnl gb qb vg.\n",
-    "Nygubhtu gung jnl znl abg or boivbhf ng svefg hayrff lbh'er Qhgpu.\n",
-    "Abj vf orggre guna arire.\n",
-    "Nygubhtu arire vf bsgra orggre guna *evtug* abj.\n",
-    "Vs gur vzcyrzragngvba vf uneq gb rkcynva, vg'f n onq vqrn.\n",
-    "Vs gur vzcyrzragngvba vf rnfl gb rkcynva, vg znl or n tbbq vqrn.\n",
-    "Anzrfcnprf ner bar ubaxvat terng vqrn -- yrg'f qb zber bs gubfr!\"\"\"\n",
-    "\n",
-    "d = {}\n",
-    "for c in (65, 97):\n",
-    "    for i in range(26):\n",
-    "        d[chr(i+c)] = chr((i+13) % 26 + c)\n",
-    "\n",
-    "print(\"\".join([d.get(c, c) for c in s]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -259,7 +213,7 @@
    },
    "outputs": [],
    "source": [
-    "this.__file__ # \"dunder file\" attribute or variable or a piece of data"
+    "this.__file__ # \"dunder file\" is an attribute (or variable)"
    ]
   },
   {
@@ -267,7 +221,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%load '/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/this.py'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -414,24 +370,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
+   "outputs": [],
    "source": [
-    "# Lab: Variables/Typing\n",
-    "* in Jupyter, type in the following and be sure you understand strong typing and dynamic typing\n",
-    "\n",
-    "<pre><b>\n",
     "i = 1\n",
     "f = 1.4\n",
     "b = True\n",
     "s = 'True'\n",
     "b = 5\n",
-    "s + b\n",
-    "</b></pre>"
+    "s + b"
    ]
   },
   {
@@ -537,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x += 'a' # x = x +'a' ... '503a'\n",
+    "x += 'a' # x = x + 'a' ... '503a'\n",
     "int(x)"
    ]
   },
@@ -755,7 +708,7 @@
    },
    "outputs": [],
    "source": [
-    "divmod(9, 5)"
+    "divmod(9, 5) # Python functions can and often do return multiple values"
    ]
   },
   {
@@ -946,6 +899,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1007,7 +961,7 @@
    "outputs": [],
    "source": [
     "s * 4\n",
-    "#'-' * 75"
+    "'-' * 75"
    ]
   },
   {
@@ -1063,7 +1017,8 @@
    },
    "source": [
     "## Lab: Strings\n",
-    "* be sure you understand what these do\n",
+    "* try these...\n",
+    "* ...be sure you understand what they do\n",
     "\n",
     "```a, b, o, p = 'b', 'a', 'p', 'o'\n",
     "o + p + o\n",
@@ -1307,7 +1262,7 @@
    "source": [
     "if x == 1:\n",
     "    print('x is 1')\n",
-    "     print('something else')"
+    "    print('something else')"
    ]
   },
   {
@@ -1427,7 +1382,7 @@
    },
    "outputs": [],
    "source": [
-    "5 < x and x < 9"
+    "5 < x and x < 9 # &&"
    ]
   },
   {
@@ -1516,8 +1471,8 @@
     "    elif guess > my_number:\n",
     "        print(\"Guess was too high\")\n",
     "    elif guess < my_number:\n",
-    "        print(\"Guess was too low\") \n",
-    "else: # runs if we terminate the loop \"normally\"\n",
+    "        print(\"Guess was too low\")        \n",
+    "else:\n",
     "    print(\"Congratulations. You guessed it!\")\n",
     "# break would put us here"
    ]
@@ -1587,7 +1542,7 @@
    "source": [
     "for num in range(10, 0, -1):\n",
     "    print(num, end='...') \n",
-    "print('\\nblast off!')"
+    "print('blast off!')"
    ]
   },
   {
@@ -1616,7 +1571,7 @@
    },
    "source": [
     "## Quick Lab: Loops/Strings\n",
-    "* have the user enter a string, then loop through the string to generate (or print) a new string in which every character is duplicated, e.g., \"hello\" => \"hheelllloo\""
+    "* have the user enter a string, then loop through the string to generate (or print) a new string in which every character is duplicated, e.g., \"Python\" => \"PPyytthhoonn\""
    ]
   },
   {
@@ -2761,7 +2716,7 @@
    },
    "outputs": [],
    "source": [
-    "'Rivian' in cars"
+    "'Rivians' in cars"
    ]
   },
   {
@@ -3131,7 +3086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
