Day 2 changes for PS open enrollment

--- a/Python Fundamentals Day 2.ipynb
+++ b/Python Fundamentals Day 2.ipynb
@@ -50,33 +50,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "i = 0\n",
     "for car in cars: # for thing in container\n",
     "    print('index', i, 'is', car)\n",
     "    i += 1"
-   ],
-   "cell_type": "code",
-   "metadata": {
-    "tags": []
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
-   "source": [
-    "## __`enumerate()`__\n",
-    "* a builtin function which associates an index with each item in an iterable\n",
-    "* returns an _enumerate_ object\n"
-   ],
-   "cell_type": "code",
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "## __`enumerate()`__\n",
+    "* a builtin function which associates an index with each item in an iterable\n",
+    "* returns an _enumerate_ object\n",
+    "* return two things: the index AND the item\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -86,8 +85,8 @@
    },
    "outputs": [],
    "source": [
-    "for index, car in enumerate(cars):\n",
-    "    print(f'index {index} is {car}')"
+    "for index, car in enumerate(cars, start=1):\n",
+    "    print('car maker', index, 'is', car)"
    ]
   },
   {
@@ -125,7 +124,7 @@
     "last_names = ['W-S', 'Lee', 'Swift']\n",
     "employee_nums = [3456, 1, 2]\n",
     "\n",
-    "for first, last, num in zip(first_names, last_names , employee_nums):\n",
+    "for first, last, num in zip(first_names, last_names, employee_nums):\n",
     "    print(first, last, num)"
    ]
   },
@@ -139,6 +138,7 @@
    "source": [
     "stooges = ['Larry', 'Moe', 'Curly']\n",
     "marxbros = ['Groucho', 'Harpo', 'Chico', 'Zeppo']\n",
+    "\n",
     "for stooge, marx in zip(stooges, marxbros):\n",
     "    print(stooge, marx)"
    ]
@@ -156,7 +156,7 @@
     "stooges = ['Larry', 'Moe', 'Curly']\n",
     "marxbros = ['Groucho', 'Harpo', 'Chico', 'Zeppo']\n",
     "\n",
-    "for stooge, marx in zip_longest(stooges, marxbros):\n",
+    "for stooge, marx in zip_longest(stooges, marxbros, fillvalue='***'):\n",
     "    print(stooge, marx)"
    ]
   },
@@ -181,7 +181,7 @@
    "source": [
     "## List Comprehensions (\"listcomps\")\n",
     "* quick/compact way to build a list\n",
-    "* more readable/faster\n",
+    "* \"more readable\"/faster\n",
     "* which is easier to read?"
    ]
   },
@@ -250,8 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tshirts = [[color, size] for size in sizes\n",
-    "                             for color in colors]\n",
+    "tshirts = [[color, size] for color in colors\n",
+    "                             for size in sizes]\n",
     "tshirts"
    ]
   },
@@ -282,8 +282,8 @@
     "# generate a list of all the consonants in a\n",
     "# string, discarding vowels and spaces\n",
     "\n",
-    "consonants = [char for char in string\n",
-    "                       if char not in 'aeiou ']\n",
+    "consonants = [char for char in string \n",
+    "                       if char not in 'aeiou! ']\n",
     "print(consonants)"
    ]
   },
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = (1,) # singleton tuple"
+    "t = ('foo',) # singleton tuple"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "person[-1].extend('physicist chemist'.split())\n",
+    "person[-1].extend(['physicist', 'chemist'])\n",
     "person"
    ]
   },
@@ -512,10 +512,10 @@
    },
    "source": [
     "## Lab: Tuples\n",
-    "* Given a list of words, sort them by length of word, rather than alphabetically.\n",
-    "* To do this, first create a list of tuples of the form (len, word), where the first element is the length of the word.\n",
-    "* Next, sort the tuples.\n",
-    "* Finally, extract the words from the list of tuples into a new list which is now sorted by length of word. Try to use a list comprehension if you can."
+    "* Create a tuple representing a city w/field of your own choosing (e.g., city name, state/country, population, elevation, etc.)\n",
+    "* \"Add\" a field to the tuple–since tuples are immutable, you will have to do this by concatenating tuples\n",
+    "* Using the _in_ operator, check to see if a particular value is in the tuple\n",
+    "* Using the __`.index()`__ method, find the position of a particular value in the tuple"
    ]
   },
   {
@@ -725,63 +725,7 @@
     }
    },
    "source": [
-    "## Dictionaries: __`enumerate()`__\n",
-    "* because dicts are unordered, __`enumerate()`__ isn't all that useful"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for thing in sbux_dict: # dict iteration returns keys\n",
-    "    print(thing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, val in enumerate(sbux_dict):\n",
-    "    print('index', index, 'is', val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for thing in sbux_dict:\n",
-    "    print(thing, sbux_dict[thing])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# We can iterate through the dict items, but remember that dict\n",
-    "# is unordered...\n",
-    "for key, val in sbux_dict.items(): # tuple unpacking\n",
-    "    print(key, '=>', val)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# __`get()`__/__`setdefault()`__: Dealing with missing dict values"
+    "# __`get()`__: Dealing with missing dict values"
    ]
   },
   {
@@ -829,40 +773,6 @@
    "outputs": [],
    "source": [
     "print(d.get('foot'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.setdefault('foo', 23) # get the value of 'foo' or add 'foo' \n",
-    "# to dict with value = 23\n",
-    "# if 'foo' in d:\n",
-    "#     return d['foo']\n",
-    "# else:\n",
-    "#     d['foo'] = 23\n",
-    "#     return 23"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(d.setdefault('foot', 23))\n",
-    "print(d)"
    ]
   },
   {
@@ -1233,179 +1143,6 @@
     }
    },
    "source": [
-    "## sets (cont'd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "even = set(range(2, 11, 2))\n",
-    "odd = set(range(1, 10, 2))\n",
-    "print(even, odd, sep='\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prime = {2, 3, 5, 7}\n",
-    "prime & odd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prime & even"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "odd | even"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prime - even"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prime ^ odd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## sets + dicts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies = {\n",
-    "    'Die Hard': { 'Bruce Willis', 'Alan Rickman', 'Bonnie Bedelia' },\n",
-    "    'The Sixth Sense' : { 'Toni Collete', 'Bruce Willis', 'Donnie Wahlberg' },\n",
-    "    'The Hunt for Red October' : { 'Sean Connery', 'Alec Baldwin' },\n",
-    "    'The Highlander': { 'Christopher Lambert', 'Sean Connery' },\n",
-    "    '16 Blocks': { 'Bruce Willis', ' Yasiin Bey', 'David Morse' }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for title, stars in movies.items():\n",
-    "    if 'Bruce Willis' in stars:\n",
-    "        print(title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for title, stars in movies.items():\n",
-    "    if stars & { 'Alan Rickman', 'Sean Connery' }:\n",
-    "        print(title)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Subsets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set1 = { 1, 2, 3 }\n",
-    "set2 = { 1, 2, 3, 5, 7, 9 }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set1 <= set2 # <= means \"subset\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set1 <= set1 # a set is always a subset of itself"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set1 < set1 # but a set is never a proper subset of itself"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set1 < set2 # set1 is a proper subset of set2 because set2 has all of set1 *and more*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "## Lab: Sets\n",
     "* Use a set to find all of the unique words in the input and print them out in sorted order\n",
     "* If the user entered __There is no there there__, your program should print out \n",
@@ -1428,10 +1165,7 @@
     "## Sets Recap\n",
     "* unordered\n",
     "* no duplicates\n",
-    "* operators &, |, -, ^\n",
-    "* use __`in`__ to test for membership\n",
-    "* subset vs. proper subset\n",
-    "\n"
+    "* use __`in`__ to test for membership\n"
    ]
   },
   {
@@ -1617,7 +1351,7 @@
    "source": [
     "f = open('poem.txt', 'w')\n",
     "# another example of why print being a function is good\n",
-    "print(poem, file=f) \n",
+    "print(poem, file=f, end='') \n",
     "f.close()"
    ]
   },
@@ -1817,9 +1551,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "name": "python38464bitabe7c2d924894b07acbce95f4acf8ebe",
-   "display_name": "Python 3.8.4 64-bit",
-   "language": "python"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1831,7 +1565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.7.4"
   },
   "metadata": {
    "interpreter": {
