--- a/Python Fundamentals Day 1.ipynb
+++ b/Python Fundamentals Day 1.ipynb
@@ -16,9 +16,9 @@
    },
    "source": [
     "# Logistics\n",
-    "* Dave Wade-Stein (dave@developintelligence.com)\n",
+    "* Tyler Bettilyon (teb@tebs-lab.com)\n",
     "* Class Time: 9-4 Pacific\n",
-    "* Lunch: 11:45-12:30 Pacific"
+    "* Lunch: 12:00-1 Pacific"
    ]
   },
   {
@@ -33,8 +33,7 @@
     "* Where are you located?\n",
     "* What is your job title/what do you do?\n",
     "* What do you want to get out of the course?\n",
-    "* What's your programming/Python background?\n",
-    "* Fun fact/TV show"
+    "* What's your programming/Python background?"
    ]
   },
   {
@@ -3086,7 +3085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
