updated repo git location in intro materials

--- a/Python Fundamentals Day 1.ipynb
+++ b/Python Fundamentals Day 1.ipynb
@@ -116,7 +116,7 @@
     "# Let's Get Set Up!\n",
     "* https://app.pluralsight.com/library/courses/python-data-analysts/table-of-contents\n",
     "* Open up a Terminal\n",
-    "* __`git clone https://github.com/DevelopIntelligenceBoulder/Python-Fundamentals`__"
+    "* __`git clone git@github.com:Tebs-Lab/python-fundamentals-DI.git`__"
    ]
   },
   {
