added solutions to all the exercises

--- a/Python Fundamentals Day 2.ipynb
+++ b/Python Fundamentals Day 2.ipynb
@@ -85,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "for index, car in enumerate(cars, start=1):\n",
+    "for index, car in enumerate(cars):\n",
     "    print('car maker', index, 'is', car)"
    ]
   },
@@ -125,7 +125,8 @@
     "employee_nums = [3456, 1, 2]\n",
     "\n",
     "for first, last, num in zip(first_names, last_names, employee_nums):\n",
-    "    print(first, last, num)"
+    "    print(first, last, num)\n",
+    "    "
    ]
   },
   {
@@ -156,8 +157,18 @@
     "stooges = ['Larry', 'Moe', 'Curly']\n",
     "marxbros = ['Groucho', 'Harpo', 'Chico', 'Zeppo']\n",
     "\n",
-    "for stooge, marx in zip_longest(stooges, marxbros, fillvalue='***'):\n",
-    "    print(stooge, marx)"
+    "for stooge, marx in zip_longest(stooges, marxbros):\n",
+    "    print(stooge, marx)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(zip(stooges, marxbros))"
    ]
   },
   {
@@ -217,9 +228,9 @@
    },
    "outputs": [],
    "source": [
-    "fruit_lengths = [len(fruit) for fruit in fruits]\n",
+    "fruit_lengths_2 = [len(fruit) for fruit in fruits]\n",
     "\n",
-    "print(fruit_lengths)"
+    "print(fruit_lengths_2)"
    ]
   },
   {
@@ -250,8 +261,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tshirts = [[color, size] for color in colors\n",
-    "                             for size in sizes]\n",
+    "tshirts = [\n",
+    "    color + ' ' + size for color in colors \n",
+    "                          for size in sizes\n",
+    "]\n",
+    "\n",
     "tshirts"
    ]
   },
@@ -318,6 +332,68 @@
     "  * start with a list of, say, 5 names ['John', 'Mary', 'Edward', 'Linda', 'Dinesh']\n",
     "  * and a list of, say, 5 ID numbers [1003, 2043, 8762, 7862, 1093]\n",
     "  * additional wrinkle: do not include any names whose corresponding ID is -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = ['black', 'white']\n",
+    "sizes = ['S', 'M', 'L', 'XL']\n",
+    "sleeves = ['short', 'long']\n",
+    "\n",
+    "all_shirts = [[color, size, sleeve] for color in colors \n",
+    "                                      for size in sizes \n",
+    "                                          for sleeve in sleeves]\n",
+    "\n",
+    "all_shirts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "squares = [num * num for num in range(1,26)]\n",
+    "squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = 'hello goodbye mom dad sister prince cat'.split()\n",
+    "\n",
+    "vowel_endings = [word for word in words if word[-1] not in 'aeiouy']\n",
+    "vowel_endings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_divisible_by_five = [num for num in range(100) if num % 5 != 0]\n",
+    "non_divisible_by_five"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['John', 'Mary', 'Edward', 'Linda', 'Dinesh']\n",
+    "ids =   [1003,    2043,   8762,     -1,      1093]\n",
+    "\n",
+    "paired = [[name, num] for name, num in zip(names, ids) if num != -1]\n",
+    "paired"
    ]
   },
   {
@@ -398,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t"
+    "type(t)"
    ]
   },
   {
@@ -407,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = 'Jones', 'John', 1023, True # no parens\n",
+    "t = ('Jones', 'John', 1023, True) # no parens\n",
     "t"
    ]
   },
@@ -418,7 +494,8 @@
    "outputs": [],
    "source": [
     "# tuple unpacking\n",
-    "last_name, first_name, employee_num, full_time = t"
+    "last_name, first_name, employee_num, full_time = t\n",
+    "print(last_name, first_name, employee_num, full_time)"
    ]
   },
   {
@@ -500,7 +577,8 @@
    "outputs": [],
    "source": [
     "person[-1].extend(['physicist', 'chemist'])\n",
-    "person"
+    "person[3].index('physicist')\n",
+    "person[3]"
    ]
   },
   {
@@ -519,6 +597,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salt_lake = ('Salt Lake City', 'Utah', 200000)\n",
+    "salt_lake += (4226,)\n",
+    "\n",
+    "print(salt_lake, 'Utah' in salt_lake, salt_lake.index(4226))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eg = ('Mumbai','0M','Maharashtra','India')\n",
+    "\n",
+    "eg = eg + ('local',)\n",
+    "\n",
+    "if 'local' in eg :\n",
+    "    print('Present')\n",
+    "\n",
+    "print(eg.index('local'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -533,6 +639,13 @@
     "* and tuples typically imply some structure and refer to multiple attributes of ONE item (person, country, building, etc.)\n",
     " * i.e., database/Excel row"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -574,7 +687,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = { 'X': 10, 'V': 5, 'I': 1 } # can be initialized when declared"
+    "d = { \n",
+    "    'X': 10, \n",
+    "    'V': 5, \n",
+    "    'I': 1 \n",
+    "} # can be initialized when declared"
    ]
   },
   {
@@ -661,7 +778,9 @@
     "for amount in sbux_dict.values():\n",
     "    total_ounces += amount\n",
     "\n",
-    "total_ounces"
+    "total_ounces\n",
+    "\n",
+    "sum(sbux_dict.values())"
    ]
   },
   {
@@ -792,6 +911,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sorted(sbux_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# In order to iterate in order, we have to sort the\n",
     "# dict by value (as opposed to key)\n",
     "# By default, sorted() will sort by key--\n",
@@ -883,6 +1011,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeral_lookup = {\n",
+    "    'M': 1000,\n",
+    "    'D': 500,\n",
+    "    'C': 100,\n",
+    "    'L': 50,\n",
+    "    'X': 10,\n",
+    "    'V': 5,\n",
+    "    'I': 1\n",
+    "}\n",
+    "\n",
+    "numerals = input(\"Enter a roman numeral string: \").upper()\n",
+    "total = 0\n",
+    "\n",
+    "for index, numeral in enumerate(numerals):\n",
+    "    # Extract the value from the dictionary\n",
+    "    try:\n",
+    "        value = numeral_lookup[numeral]\n",
+    "    except:\n",
+    "        print(\"You used a string that does not contain exclusively roman numerals\")\n",
+    "        break\n",
+    "    \n",
+    "    # Check if there is a next numeral, or if we're on the last one already\n",
+    "    next_index = index + 1\n",
+    "    if next_index < len(numerals):\n",
+    "        next_numeral = numerals[next_index]\n",
+    "        next_value = numeral_lookup[next_numeral]\n",
+    "\n",
+    "        # Check if we have the IV = 4 situation.\n",
+    "        if next_value > value:\n",
+    "            value *= -1 # If we do, then the current numeral contributes negatively to the sum!\n",
+    "            \n",
+    "    # Either way, add the appropriate value to the sum\n",
+    "    total += value\n",
+    "    \n",
+    "    \n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roman_numerals = {\"M\":1000,\"CM\":900,\"D\":500,\"CD\":400,\"C\":100,\"XC\":90,\"L\":50,\"XL\":40,\"X\":10,\"V\":5,\"IV\":4,\"I\":1}\n",
+    "\n",
+    "type(roman_numerals)\n",
+    "romannumber = input('enter a roman number')\n",
+    "\n",
+    "Count = 0\n",
+    "\n",
+    "for numeral in romannumber:\n",
+    "    Count += roman_numerals[numeral]\n",
+    "\n",
+    "print(Count)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -943,7 +1134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_dict_inverse = { val : key for key, val in id_dict.items() }"
+    "id_dict_inverse = { val : key for key, val in d.items() }"
    ]
   },
   {
@@ -1085,7 +1276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.remove('Betty')"
+    "s.remove('Loren')"
    ]
   },
   {
@@ -1103,7 +1294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.discard('Loren')"
+    "s.discard('Ellen')"
    ]
   },
   {
@@ -1152,6 +1343,31 @@
     "   there\n",
     "   </b></pre>\n",
     "* Note that `There` and `there` should be counted as the same word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = input('Input some words: ').lower().split()\n",
+    "unique_words = set(words)\n",
+    "sorted_unique_words = sorted(unique_words)\n",
+    "\n",
+    "print() # Just to print an empty line.\n",
+    "for word in sorted_unique_words:\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = set()\n",
+    "type(s)"
    ]
   },
   {
@@ -1246,7 +1462,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('test.txt', 'x')"
+    "!echo \"text\" > test.txt\n",
+    "!cat test.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('test.txt', 'a')"
    ]
   },
   {
@@ -1310,6 +1536,15 @@
    "outputs": [],
    "source": [
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat poem.txt"
    ]
   },
   {
@@ -1452,7 +1687,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
     "with open('poem.txt') as f1: # ~ f1 = open('poem.txt')\n",
@@ -1500,6 +1737,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a filename: poem.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = input('Enter a filename: ')\n",
+    "\n",
+    "with open(filename) as infile:\n",
+    "    lines = infile.readlines() # get all lines of file as a list\n",
+    "    \n",
+    "lines_reversed = lines[::-1]\n",
+    "\n",
+    "# The final line of the file might not have a newline character at the end.\n",
+    "# If that's the case it'll share a line with the second-to-last-line\n",
+    "# This code addresses that possibility.\n",
+    "if not lines_reversed[0].endswith('\\n'):\n",
+    "    lines_reversed[0] += '\\n'\n",
+    "\n",
+    "# Make the lines a single piece of text\n",
+    "reversed_text = ''.join(lines_reversed)\n",
+    "\n",
+    "# Write to a file with the same name with .rev added as a suffix\n",
+    "with open(filename + '.rev', 'w') as outfile:\n",
+    "    outfile.write(reversed_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "And that has made all the difference.\r\n",
+      "I took the one less traveled by,\r\n",
+      "Two roads diverged in a wood, and I—\r\n",
+      "Somewhere ages and ages hence:\r\n",
+      "I shall be telling this with a sigh\r\n",
+      "\r\n",
+      "I doubted if I should ever come back.\r\n",
+      "Yet knowing how way leads on to way,\r\n",
+      "Oh, I kept the first for another day!\r\n",
+      "In leaves no step had trodden black.\r\n",
+      "And both that morning equally lay\r\n",
+      "\r\n",
+      "Had worn them really about the same,\r\n",
+      "Though as for that the passing there\r\n",
+      "Because it was grassy and wanted wear;\r\n",
+      "And having perhaps the better claim,\r\n",
+      "Then took the other, as just as fair,\r\n",
+      "\r\n",
+      "To where it bent in the undergrowth;\r\n",
+      "And looked down one as far as I could\r\n",
+      "And be one traveler, long I stood\r\n",
+      "And sorry I could not travel both\r\n",
+      "TWO roads diverged in a yellow wood,\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat poem.txt.rev"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1516,6 +1827,71 @@
     "* print out words and counts, from most common to least common\n",
     "* EXTRA: remove punctuation, so __Hamlet,__ == __Hamlet__ # refer back to \"import this\"\n",
     "* Road Not Taken and Hamlet are in your materials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Tragedy of Hamlet, Prince of Denmark Shakespeare homepage |\n",
+      "Hamlet | Entire play ACT I\n",
+      "\n",
+      "SCENE I. Elsinore. A platform before the castle.\n",
+      "\n",
+      "FRANCISCO at his post. Enter to him BERNARDO BERNARDO Who's there?\n",
+      "FRANCISCO Nay, answer me: stand, and unfold yourself.  BERNARDO\n",
+      "Long live the king!  FRANCISCO Bernardo?  BERNARDO He.  FRANCISCO\n",
+      "You come most carefully upon your hour.  BERNARDO 'Tis now struck\n",
+      "twelve; get thee to bed, Francisco.  FRANCISCO For this relief much\n",
+      "thanks: 'tis bitter cold, A\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "counts = {}\n",
+    "\n",
+    "with open('hamlet.txt') as f:\n",
+    "    for line in f:\n",
+    "        words = line.lower().split()\n",
+    "        \n",
+    "        for word in words:\n",
+    "            without_punct = ''.join([char for char in word if char not in string.punctuation])\n",
+    "            \n",
+    "            if without_punct not in counts:\n",
+    "                counts[without_punct] = 0\n",
+    "            \n",
+    "            counts[without_punct] += 1\n",
+    "            \n",
+    "# Now we have the counts... Lets order them...\n",
+    "sorted_word_list = sorted(counts, key=counts.get, reverse=True)\n",
+    "\n",
+    "for word in sorted_word_list:\n",
+    "    print(f'\"{word}\" appears {counts[word]} times.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "print(string.punctuation)"
    ]
   },
   {
@@ -1565,7 +1941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
   },
   "metadata": {
    "interpreter": {
